feat: implement email editable api
