# server/api/private/me/email/index.ts
@@ -1,0 +1,9 @@
+import type { DefineMethods } from 'aspida';
+import type { UserDto } from 'common/types/user';
+
+export type Methods = DefineMethods<{
+  post: {
+    reqBody: { code: string };
+    resBody: UserDto;
+  };
+}>;
